# tolc

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  COPYRIGHT.md  LICENSE.md  README.md  index.html  sitemap.xml
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
FAQ/: index.html
cmake/: Catch2Helpers.cmake  CodeCoverage.cmake  ConanHelpers.cmake  GetBoost.cmake  GetEmscripten.cmake  GetFrontendpy.cmake  GetParser.cmake  GithubHelpers.cmake  Options.cmake  ProjectSettings.cmake  Sanitizers.cmake  SetupTest.cmake  StaticAnalyzers.cmake  WarningsAndOptions.cmake  copyLLVMIncludes.cmake
cmake/interface/: index.html
cmake/packaging/: README.md  tolcConfig.cmake
cmake/packaging/scripts/: gather_headers.py  gather_headers.sh
cmake/packaging/tolc/: GetPybind11.cmake  tolcAddTarget.cmake  tolcConfig.cmake  tolcCreateTranslation.cmake  tolcTranslate.cmake
cmake/packaging/tolc/Helpers/: combinedHeaders.hpp.in
cmake/reference/: index.html
css/tolc/: buttons.css  footer.css  markdown.css
docs/: Release.md  architecture.md
docs/ReleaseNotes/: .gitignore  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.4.1.md  v0.5.0.md  v0.6.0.md  v0.6.1.md  v0.6.2.md  v0.6.3.md  v0.7.0.md  version.in
docs/packaging/: .gitignore  README.md  mkdocs.yml
docs/packaging/docs/: CNAME  FAQ.md  getting_tolc.md  index.md  installing.md  newsletter.md  signup.md  translating_an_existing_library.md  usage.md
docs/packaging/docs/cmake/: cmake.md  interface.md  reference.md
docs/packaging/docs/guides/: translating_a_cpp_library.md
docs/packaging/docs/objc/: conversions.md  examples.md  naming_convention.md  quickstart.md
docs/packaging/docs/webassembly/: conversions.md  examples.md  faq.md  introduction.md  overloaded_functions_naming_convention.md  quickstart.md  template_naming_convention.md
docs/packaging/tolc_theme/: base.html  nav.html
docs/packaging/tolc_theme/css/: theme.css
docs/packaging/tolc_theme/css/tolc/: buttons.css  editor-tabs.css  footer.css  mailchimp.css  markdown.css  sidenav.css  theme.css  topnav.css
docs/packaging/tolc_theme/js/: theme.js
docs/packaging/tolc_theme/js/highlightjs/: DIGESTS.md  highlight.min.js
installing/: index.html
js/: theme.js
js/highlightjs/: highlight.min.js
objc/conversions/: index.html
objc/examples/: index.html
objc/naming_convention/: index.html
objc/quickstart/: index.html
python/conversions/: index.html
python/examples/: index.html
python/quickstart/: index.html
python/template_naming_convention/: index.html
search/: search_index.json
src/: tolc.main.cpp
src/CommandLine/: Config.hpp  addOptions.cpp  addOptions.hpp  buildConfig.cpp  buildConfig.hpp  parse.cpp  parse.hpp
src/CommandLine/LanguageConfig/: python.hpp
src/Log/: log.cpp  log.hpp  postJSON.cpp  postJSON.hpp
src/TolcInternal/: buildConfig.cpp  buildConfig.hpp  getExecutableDirectoryPath.cpp  getExecutableDirectoryPath.hpp  getExecutablePath.cpp  getExecutablePath.hpp  getSystemIncludes.cpp.in  getSystemIncludes.hpp  run.cpp  run.hpp
tests/: CMakeLists.txt  README.md
tests/CommandLine/: parse.cpp
tests/Log/: postJSON.cpp
tests/TestFiles/: base.hpp  include.hpp  std.hpp
tests/TestFiles/include/: userIncluded.hpp
tests/TestUtil/include/TestUtil/: CommandLineInput.hpp  getTestFilesDirectory.hpp  getTestFilesDirectory.hpp.in  startServer.hpp
tests/TestUtil/python/: server.py
tests/TestUtil/src/TestUtil/: CommandLineInput.cpp  startServer.cpp
tests/TolcInternal/: buildConfig.cpp  getExecutableDirectoryPath.cpp  getExecutablePath.cpp  getSystemIncludes.cpp  run.cpp
tests/packaging/: CMakeLists.txt  README.md
tests/packaging/consumer/: .gitignore  CMakeLists.txt
tests/packaging/moduleTests/: .gitignore  CMakeLists.txt  README.md  noInputFile.cmake  noLanguage.cmake  noModuleName.cmake  noOutput.cmake  simpleTolcTranslateFile.cmake
tests/packaging/moduleTests/headers/: simple.hpp
tests/packaging/modulesTests/: CMakeLists.txt  moduleHelper.cmake.in  simpleTolcTranslateFile.cmake
tests/packaging/systemTests/: CMakeLists.txt  README.md
tests/packaging/systemTests/addLibraryTest/: CMakeLists.txt
tests/packaging/systemTests/addLibraryTest/src/: myPythonModule.cpp
tests/packaging/systemTests/createTranslationTest/: CMakeLists.txt
tests/packaging/systemTests/createTranslationTest/include/: myLib.hpp
tests/packaging/systemTests/createTranslationTest/src/: myLib.cpp
tests/packaging/systemTests/createTranslationTestObjc/: CMakeLists.txt
tests/packaging/systemTests/createTranslationTestObjc/include/: myLib.hpp
tests/packaging/systemTests/createTranslationTestObjc/src/: consumer.m  myLib.cpp
tests/packaging/systemTests/createTranslationTestWasm/: .gitignore  CMakeLists.txt  test.js
tests/packaging/systemTests/translateFileTest/: .gitignore  CMakeLists.txt
tests/packaging/systemTests/translateFileTest/src/: check_variables.hpp.in  consumer.cpp
tests/packaging/systemTests/translateLibraryTest/: .gitignore  CMakeLists.txt
tests/packaging/systemTests/translateLibraryTest/src/: check_variables.hpp.in  consumer.cpp
tests/packaging/systemTests/translateLibraryWithHeaders/: CMakeLists.txt
tests/packaging/systemTests/translateLibraryWithHeaders/include/: consumer.hpp
tests/packaging/systemTests/translateLibraryWithHeaders/src/: consumer.cpp
tools/: get_release_id.py
tools/conan_profiles/Darwin/: clang  clang.in
tools/conan_profiles/Linux/: clang  clang.in
tools/conan_profiles/Windows/: clang.in
tools/packaging/: CMakeLists.txt
usage/: index.html
webassembly/conversions/: index.html
webassembly/examples/: index.html
webassembly/faq/: index.html
webassembly/introduction/: index.html
webassembly/overloaded_functions_naming_convention/: index.html
webassembly/quickstart/: index.html
webassembly/template_naming_convention/: index.html
